<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#F9F9F9"
    tools:context=".StudentActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:id="@+id/header_title"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/adst_name"
            android:textSize="20sp"/>


        <EditText
            android:id="@+id/fname"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fname_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/mname"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mname_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lname"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lname_name"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/email"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mail_name"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_name"
            android:inputType="phone" />
        <EditText
            android:id="@+id/dob"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/dob_name"
            android:inputType="date" />
        <Spinner
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:entries="@array/gender"/>

        <EditText
            android:id="@+id/user"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="text" />
        <EditText
            android:id="@+id/pss"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pss_name"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:onClick="insertStudent"
            android:text="@string/adst_name"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:onClick="showStudents"
            android:text="@string/vw_name"/>

    </LinearLayout>

</ScrollView>