<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#F9F9F9"
    tools:context=".StudentActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:id="@+id/header_title"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/crse_name"
            android:textSize="20sp"/>


        <EditText
            android:id="@+id/ccd"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/crscd_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/cnm"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/crsnm_name"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/crdts"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/crdts_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/smstr"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/semester_name"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/yos"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/year_name"
            android:inputType="textEmailAddress" />

        <Spinner
            android:id="@+id/cours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:entries="@array/course"/>

        <Button
            android:id="@+id/crs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:onClick="addDetails"
            android:text="@string/regcrs_name"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:onClick="showCourses"
            android:text="@string/vwcrs_name"/>

    </LinearLayout>

</ScrollView>