<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginBottom="200dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:text="@string/admn_name"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/std_name"
        android:textSize="20dp"
        android:onClick="registerStudent"
        android:layout_marginBottom="4dp"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/crs_name"
        android:onClick="registerCourse"
        android:textSize="20dp"
        android:layout_marginBottom="4dp"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/stf_name"
        android:textSize="20dp"
        android:onClick="registerStaff"
        android:layout_marginBottom="4dp"/>
<!--    <Button-->
<!--        android:id="@+id/see"-->
<!--        android:onClick="showStudents"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/vw_name"-->
<!--        android:textSize="20dp"-->
<!--        android:layout_marginBottom="4dp"/>-->

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/lout_name"
        android:onClick="logoutUser"
        android:textSize="20dp"
        android:layout_marginBottom="4dp"/>



</LinearLayout>